--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,6 @@ readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
     "jupyter>=1.1.1",
+    "plotly>=6.4.0",
     "taipy>=4.1.0",
 ]
